Started making functions to populate the database from the api; done with teams, players and venues

--- a/python/baseballPlayground2.ipynb
+++ b/python/baseballPlayground2.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,13 @@
     "import psycopg2\n",
     "from baseball_data import generateGamePksFromDates\n",
     "import psycopg2.extras\n",
-    "import time"
+    "import time\n",
+    "from api2psql import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,40 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn.commit()\n",
-    "cur.close()\n",
+    "#conn.commit()\n",
     "conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def populateVenueTable(dbConnection):\n",
-    "    teams = statsapi.get('teams', {})\n",
-    "\n",
-    "    venueDict = {'venueIds': [], 'venueNames': []}\n",
-    "    for team in teams['teams']:\n",
-    "        activeVenue = team['venue']['id']\n",
-    "        if activeVenue not in venueDict['venueIds']:\n",
-    "            venueDict['venueIds'].append(team['venue']['id'])\n",
-    "            venueDict['venueNames'].append(team['venue']['name'])\n",
-    "\n",
-    "    with dbConnection.cursor() as cur:\n",
-    "        for i in range(len(venueDict['venueIds'])):\n",
-    "            cur.execute(\n",
-    "                \"\"\"\n",
-    "                INSERT INTO venues(id, name)\n",
-    "                    VALUES (%s, %s)\n",
-    "                \"\"\",\n",
-    "                (venueDict['venueIds'][i], venueDict['venueNames'][i])\n",
-    "                )"
    ]
   },
   {
@@ -99,64 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "populateVenueTable(conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "teams = statsapi.get('teams', {})\n",
-    "venueDict = {'venueIds': [], 'venueNames': []}\n",
-    "manyList = []\n",
-    "for team in teams['teams']:\n",
-    "    activeVenue = team['venue']['id']\n",
-    "    if activeVenue not in venueDict['venueIds']:\n",
-    "        venueDict['venueIds'].append(team['venue']['id'])\n",
-    "        venueDict['venueNames'].append(team['venue']['name'])\n",
-    "        manyList.append((team['venue']['id'], team['venue']['name']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cur = conn.cursor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cur.executemany(\n",
-    "    \"\"\"\n",
-    "    INSERT INTO venues(id, name)\n",
-    "        VALUES (%s, %s)\n",
-    "    \"\"\",\n",
-    "    manyList\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "psycopg2.extras.execute_batch(\n",
-    "    cur,\n",
-    "    \"\"\"\n",
-    "    INSERT INTO venues(id, name)\n",
-    "        VALUES (%s, %s)\n",
-    "    \"\"\",\n",
-    "    manyList\n",
-    ")"
+    "populateTeamTable(conn)"
    ]
   }
  ]
