Finished populating database for 2015 - 2020; can add more, but will need to look into api format changes for older games

--- a/python/baseballPlayground.ipynb
+++ b/python/baseballPlayground.ipynb
@@ -37,6 +37,9 @@
     "import re\n",
     "import time\n",
     "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "from testGame import testGameJson\n",
     "from api2psqlPopulateFns import *\n",
     "from api2psqlSupporting import *"
@@ -44,14 +47,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = time.time()\n",
-    "populateMajorTablesMaster(conn)\n",
-    "end = time.time()"
+    "conn = psycopg2.connect(\n",
+    "    host = \"localhost\",\n",
+    "    database = \"baseball\",\n",
+    "    user = \"karisch\",\n",
+    "    password = \"cocacola\",\n",
+    "    port = 5432\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.commit()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with conn.cursor() as cur:\n",
+    "    cur.execute(\"\"\"SELECT P.* FROM pitches P INNER JOIN games G ON P.\"gamePk\"=G.pk WHERE G.season = 2019 AND G.type = 'R';\"\"\")\n",
+    "    jack = cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = [\"gamePk\",\"atBatIndex\",\"pitchIndex\",\"callCode\",\"callDesc\",\"isInPlay\",\"isStrike\",\"isBall\",\"typeCode\",\"typeDesc\",\"hasReview\",\"countBalls\",\"countStrikes\",\"startSpeed\",\"endSpeed\",\"szTop\",\"szBottom\",\"aX\",\"aY\",\"aZ\",\"pfxX\",\"pfxZ\",\"pX\",\"pZ\",\"vX0\",\"vY0\",\"vZ0\",\"x\",\"y\",\"x0\",\"y0\",\"z0\",\"breakAngle\",\"breakLength\",\"breakY\",\"spinRate\",\"spinDirection\",\"zone\",\"typeConfidence\",\"plateTime\",\"extension\",\"pitchNumber\",\"launchSpeed\",\"launchAngle\",\"totalDistance\",\"trajectory\",\"hardness\",\"location\",\"coordX\",\"coordY\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "penis = pd.DataFrame(data=jack, columns = cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(2429,)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "penis['gamePk'].unique().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(2416,)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "penis[penis['typeCode'].notnull()]['gamePk'].unique().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cuck = [x for x in jack if x[8] is not None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "750864"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "len(jack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "727762"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "len(cuck)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jack[0][8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with conn.cursor() as cur:\n",
+    "    cur.execute(\"\"\"SELECT \"pitchIndex\" FROM pitches;\"\"\")\n",
+    "    penis = [x[0] for x in cur.fetchall()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4502904"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "len(penis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
