--- a/python/baseballPlayground2.ipynb
+++ b/python/baseballPlayground2.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.7.6 64-bit ('base': conda)",
-   "display_name": "Python 3.7.6 64-bit ('base': conda)",
+   "name": "Python 3.7.6 64-bit ('anaconda3': virtualenv)",
+   "display_name": "Python 3.7.6 64-bit ('anaconda3': virtualenv)",
    "metadata": {
     "interpreter": {
      "hash": "e7ad3e331d89125a35e1aa51e4cbfadb7339476d992231fff57158d187b2117c"
@@ -28,100 +28,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import statsapi\n",
     "import psycopg2\n",
-    "from baseball_data import generateGamePksFromDates\n",
-    "import psycopg2.extras\n",
+    "import re\n",
     "import time\n",
-    "from api2psql import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn = psycopg2.connect(\n",
-    "    host = \"localhost\",\n",
-    "    database = \"baseball\",\n",
-    "    user = \"karisch\",\n",
-    "    password = \"cocacola\",\n",
-    "    port = 5432\n",
-    ")\n",
-    "#conn.autocommit = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#conn.commit()\n",
-    "conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "populateTeamTable(conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jack = statsapi.get('league', {'sportId': 1})\n",
-    "jack['leagues'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sports = statsapi.get('sports',{})['sports']\n",
     "\n",
-    "args = []\n",
-    "for sport in sports:\n",
-    "    leagues = statsapi.get('league', {'sportId': sport})['leagues']\n",
-    "    for league in leagues:\n",
-    "        args.append(\n",
-    "            (\n",
-    "                dictTry(league, ['id']),\n",
-    "                dictTry(league, ['name']),\n",
-    "                dictTry(league, ['season']),\n",
-    "            )\n",
-    "        )"
+    "from testGame import testGameJson\n",
+    "from api2psqlPopulateFns import *\n",
+    "from api2psqlSupporting import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jack = statsapi.get('sports', {})"
+    "def updateMajorTablesMaster(dbConnection, startDate, endDate):\n",
+    "    with dbConnection.cursor() as cur:\n",
+    "        cur.execute(\"SELECT pk FROM major.games;\")\n",
+    "        gamesPulled = [x[0] for x in cur.fetchall()]\n",
+    "        cur.execute(\"\"\"SELECT \"seasonId\" FROM major.seasons;\"\"\")\n",
+    "        seasonsPulled = [x[0] for x in cur.fetchall()]\n",
+    "        cur.execute(\"\"\"SELECT id FROM major.players;\"\"\")\n",
+    "        playersPulled = [x[0] for x in cur.fetchall()]\n",
+    "\n",
+    "    populatePlayerTable(dbConnection, startDate, endDate, playersPulled)\n",
+    "    populateSeasonTable(dbConnection, startDate, endDate, seasonsPulled)\n",
+    "    populateGamesTablesMaster(dbConnection, schema, startDate, endDate, pathListListDict, commandDict, gamesPulled)\n",
+    "    \n",
+    "    dbConnection.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jack['sports']"
+    "with conn.cursor() as cur:\n",
+    "    cur.execute(\"SELECT id, season FROM teams;\")\n",
+    "    jack = cur.fetchall()"
    ]
   }
  ]
